--- a/composer.json
+++ b/composer.json
@@ -62,12 +62,9 @@
             "php": "7.2.5"
         },
         "sort-packages": true,
-        "bin-dir": "bin",
-        "component-dir": "public",
-        "public-dir": "public"
+        "component-dir": "public"
     },
     "extra": {
-        "symfony-app-dir": "app",
         "symfony-assets-install": "relative",
         "installer-paths": {
             "src/extensions/{$vendor}/{$name}": ["type:zikula-module", "type:zikula-theme"]
