--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         "platform": {
             "php": "7.2.5"
         },
+        "bin-dir": "bin",
         "sort-packages": true,
         "component-dir": "public"
     },
