--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
         "php": "^7.2.5",
         "zikula/core-bundle": "dev-master",
 
-        "zikula/legal-module": "dev-master",
-        "zikula/profile-module": "dev-master",
-        "zikula/oauth-module": "dev-master",
-        "zikula/pagelock-module": "dev-master"
+        "zikula/legal-module": "3.*",
+        "zikula/oauth-module": "1.*",
+        "zikula/pagelock-module": "1.*",
+        "zikula/profile-module": "3.*"
     },
     "repositories": [
         {
