--- a/.github/workflows/build-archives.yml
+++ b/.github/workflows/build-archives.yml
@@ -1,7 +1,7 @@
 name: Build archives
 on:
   push:
-    branches-ignore: [gh-pages]
+    branches: [master]
 jobs:
   build:
     runs-on: ubuntu-latest
