--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "homepage": "https://ziku.la/",
     "license": "LGPL-3.0-or-later",
-    "minimum-stability": "dev",
+    "minimum-stability": "RC",
     "prefer-stable": true,
     "authors": [
         {
@@ -21,7 +21,7 @@
         "ext-mbstring": "*",
         "ext-json": "*",
         "ext-pdo": "*",
-        "zikula/core-bundle": "dev-master",
+        "zikula/core-bundle": "3.*",
 
         "zikula/legal-module": "3.*",
         "zikula/oauth-module": "1.*",
