add symfony flex

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,17 @@
 !/public/site.webmanifest
 /src/extensions/
 /src/preload.php
-/var/
-/vendor/
+
+###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
 /.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
