--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
     },
     "require": {
         "php": "^7.2.5",
-        "ext-xml": "*",
-        "ext-mbstring": "*",
         "ext-json": "*",
+        "ext-mbstring": "*",
         "ext-pdo": "*",
+        "ext-xml": "*",
+        "symfony/flex": "^1.11",
 
         "zikula/core-bundle": "dev-master",
         "zikula/coreinstaller-bundle": "dev-master",
@@ -55,6 +56,9 @@
         "zikula/pagelock-module": "dev-master",
         "zikula/profile-module": "dev-master"
     },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
     "repositories": [
         {
             "type": "git",
@@ -73,14 +77,19 @@
         ],
         "post-update-cmd": [
             "@zikula-scripts"
-        ]
+        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script",
+            "requirements-checker": "script"
+        }
     },
     "config": {
         "platform": {
             "php": "7.2.5"
         },
-        "bin-dir": "bin",
-        "sort-packages": true
+        "bin-dir": "bin"
     },
     "extra": {
         "symfony-assets-install": "relative",
