composer script change

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,12 @@
         }
     ],
     "scripts": {
+        "post-install-cmd": [
+            "@zikula-scripts"
+        ],
+        "post-update-cmd": [
+            "@zikula-scripts"
+        ],
         "zikula-scripts": [
             "composer dump-autoload",
             "bin/console cache:clear --env prod",
