--- a/composer.json
+++ b/composer.json
@@ -23,38 +23,38 @@
         "ext-xml": "*",
         "symfony/flex": "^1.11",
 
-        "zikula/core-bundle": "dev-master",
-        "zikula/coreinstaller-bundle": "dev-master",
-        "zikula/formextension-bundle": "dev-master",
-        "zikula/hook-bundle": "dev-master",
-        "zikula/workflow-bundle": "dev-master",
+        "zikula/core-bundle": "^3.1",
+        "zikula/coreinstaller-bundle": "^3.1",
+        "zikula/formextension-bundle": "^3.1",
+        "zikula/hook-bundle": "^3.1",
+        "zikula/workflow-bundle": "^3.1",
 
-        "zikula/admin-module": "dev-master",
-        "zikula/atom-theme": "dev-master",
-        "zikula/blocks-module": "dev-master",
-        "zikula/bootstrap-theme": "dev-master",
-        "zikula/categories-module": "dev-master",
-        "zikula/default-theme": "dev-master",
-        "zikula/extensions-module": "dev-master",
-        "zikula/groups-module": "dev-master",
-        "zikula/mailer-module": "dev-master",
-        "zikula/menu-module": "dev-master",
-        "zikula/permissions-module": "dev-master",
-        "zikula/printer-theme": "dev-master",
-        "zikula/routes-module": "dev-master",
-        "zikula/rss-theme": "dev-master",
-        "zikula/search-module": "dev-master",
-        "zikula/securitycenter-module": "dev-master",
-        "zikula/settings-module": "dev-master",
-        "zikula/theme-module": "dev-master",
-        "zikula/users-module": "dev-master",
-        "zikula/zauth-module": "dev-master",
-        "zikula/sortable-columns": "1.*",
+        "zikula/admin-module": "^3.1",
+        "zikula/atom-theme": "^3.1",
+        "zikula/blocks-module": "^3.1",
+        "zikula/bootstrap-theme": "^3.1",
+        "zikula/categories-module": "^3.1",
+        "zikula/default-theme": "^3.1",
+        "zikula/extensions-module": "^3.1",
+        "zikula/groups-module": "^3.1",
+        "zikula/mailer-module": "^3.1",
+        "zikula/menu-module": "^3.1",
+        "zikula/permissions-module": "^3.1",
+        "zikula/printer-theme": "^3.1",
+        "zikula/routes-module": "^3.1",
+        "zikula/rss-theme": "^3.1",
+        "zikula/search-module": "^3.1",
+        "zikula/securitycenter-module": "^3.1",
+        "zikula/settings-module": "^3.1",
+        "zikula/theme-module": "^3.1",
+        "zikula/users-module": "^3.1",
+        "zikula/zauth-module": "^3.1",
 
-        "zikula/legal-module": "dev-master",
-        "zikula/oauth-module": "dev-master",
-        "zikula/pagelock-module": "dev-master",
-        "zikula/profile-module": "dev-master"
+        "zikula/legal-module": "3.*",
+        "zikula/oauth-module": "1.*",
+        "zikula/pagelock-module": "1.*",
+        "zikula/profile-module": "3.*",
+        "zikula/staticcontent-module": "1.*"
     },
     "conflict": {
         "symfony/symfony": "*"
