--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "zikula/distribution",
+    "version": "3.1.0",
     "description": "A basic distribution of Zikula with no third party modules",
     "type": "project",
     "homepage": "https://ziku.la/",
@@ -27,6 +28,33 @@
         "components/jquery": "3.*",
         "components/jqueryui": "1.*",
         "zikula/core-bundle": "3.1.0",
+        "zikula/coreinstaller-bundle": "3.1.0",
+        "zikula/formextension-bundle": "3.1.0",
+        "zikula/hook-bundle": "3.1.0",
+        "zikula/workflow-bundle": "3.1.0",
+
+        "zikula/admin-module": "3.1.0",
+        "zikula/atom-theme": "3.1.0",
+        "zikula/blocks-module": "3.1.0",
+        "zikula/bootstrap-theme": "3.1.0",
+        "zikula/categories-module": "3.1.0",
+        "zikula/default-theme": "3.1.0",
+        "zikula/extensions-module": "3.1.0",
+        "zikula/groups-module": "3.1.0",
+        "zikula/mailer-module": "3.1.0",
+        "zikula/menu-module": "3.1.0",
+        "zikula/permissions-module": "3.1.0",
+        "zikula/printer-theme": "3.1.0",
+        "zikula/routes-module": "3.1.0",
+        "zikula/rss-theme": "3.1.0",
+        "zikula/search-module": "3.1.0",
+        "zikula/securitycenter-module": "3.1.0",
+        "zikula/settings-module": "3.1.0",
+        "zikula/theme-module": "3.1.0",
+        "zikula/users-module": "3.1.0",
+        "zikula/zauth-module": "3.1.0",
+        "zikula/sortable-columns": "1.*",
+
         "zikula/legal-module": "3.*",
         "zikula/oauth-module": "1.*",
         "zikula/pagelock-module": "1.*",
