--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-xml": "*",
         "symfony/flex": "^1",
         "components/bootstrap": "4.*",
-        "components/font-awesome": "5.*",
+        "components/font-awesome": "6.*",
         "components/jquery": "3.*",
         "components/jqueryui": "1.*",
         "zikula/core-bundle": "3.1.0",
@@ -77,7 +77,13 @@
         "platform": {
             "php": "7.2.5"
         },
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "allow-plugins": {
+            "composer/installers": true,
+            "symfony/runtime": true,
+            "oomphinc/composer-installers-extender": true,
+            "symfony/flex": true
+        }
     },
     "extra": {
         "symfony-assets-install": "relative",
