--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -43,3 +43,28 @@ doctrine:
                         dir: '%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Tree/Entity'
                         alias: GedmoTree # this one is optional and will default to the name set for the mapping
                         is_bundle: false
+
+#when@test:
+#    doctrine:
+#        dbal:
+#            # "TEST_TOKEN" is typically set by ParaTest
+#            dbname_suffix: '_test%env(default::TEST_TOKEN)%'
+
+when@prod:
+    doctrine:
+        orm:
+            auto_generate_proxy_classes: false
+            query_cache_driver:
+                type: pool
+                pool: doctrine.system_cache_pool
+            result_cache_driver:
+                type: pool
+                pool: doctrine.result_cache_pool
+
+    framework:
+        cache:
+            pools:
+                doctrine.result_cache_pool:
+                    adapter: cache.app
+                doctrine.system_cache_pool:
+                    adapter: cache.system
