--- a/config/routes/dev/php_translation.yaml
+++ b/config/routes/dev/php_translation.yaml
@@ -3,8 +3,8 @@ _translation_edit_in_place:
     prefix:  /admin
 
 _translation_webui:
-    resource: "@TranslationBundle/Resources/config/routing_webui.yaml"
-    prefix:  /admin
+    resource: '@TranslationBundle/Resources/config/routing_webui.yaml'
+    prefix: /admin
 
 _translation_profiler:
     resource: '@TranslationBundle/Resources/config/routing_symfony_profiler.yaml'
