--- a/.env
+++ b/.env
@@ -36,7 +36,7 @@ ZIKULA_INSTALLED='0.0.0'
 ###< zikula
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
+# MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> symfony/messenger ###
