--- a/config/packages/workflow.yaml
+++ b/config/packages/workflow.yaml
@@ -1,23 +1,2 @@
 framework:
-    workflows:
-        zikularoutesmodule_none:
-            type: state_machine
-            marking_store:
-                type: method
-                property: workflowState
-            supports:
-                - Zikula\RoutesModule\Entity\RouteEntity
-            places:
-                - initial
-                - approved
-                - deleted
-            transitions:
-                submit:
-                    from: initial
-                    to: approved
-                update:
-                    from: approved
-                    to: approved
-                delete:
-                    from: approved
-                    to: deleted
+    workflows: null
