--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ DEFAULT_URI=https://localhost
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 DATABASE_URL=nothing
 ###< doctrine/doctrine-bundle ###
@@ -47,13 +47,6 @@ ZIKULA_INSTALLED='0.0.0'
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
 
-###> symfony/google-mailer ###
-# Gmail SHOULD NOT be used on production, use it in development only.
-# MAILER_DSN=gmail://USERNAME:PASSWORD@default
-###< symfony/google-mailer ###
-
-###> symfony/lock ###
-# Choose one of the stores below
-# postgresql+advisory://db_user:db_password@localhost/db_name
-LOCK_DSN=semaphore
-###< symfony/lock ###
+###> nucleos/user-bundle ###
+MAIL_SENDER=no-reply@localhost
+###< nucleos/user-bundle ###
