--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -3,6 +3,7 @@ framework:
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     http_method_override: false
+    handle_all_throwables: true
 
     default_locale: en
     #enabled_locales: [en, de]
