Update file in "/.env" from "zikula/core"

--- a/.env
+++ b/.env
@@ -40,13 +40,12 @@ ZIKULA_INSTALLED='0.0.0'
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 
-###> symfony/messenger ###
-# Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=doctrine://default
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-###< symfony/messenger ###
-
 ###> nucleos/user-bundle ###
 MAIL_SENDER=no-reply@localhost
 ###< nucleos/user-bundle ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
