Update file in "/.env" from "zikula/core"

--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ DEFAULT_URI=https://localhost
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-#DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 DATABASE_URL=nothing
 ###< doctrine/doctrine-bundle ###
 ###> zikula
