--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -5,10 +5,11 @@ framework:
     http_method_override: false
     handle_all_throwables: true
 
-    default_locale: en
-    #enabled_locales: [en, de]
+    # enable language negotiation
     set_locale_from_accept_language: true
     set_content_language_from_locale: true
+    default_locale: en
+    #enabled_locales: [en, de]
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
